# smart-leds-fx

./: Cargo.toml  README.md
examples/: esp32_basic.rs  terminal_sim.rs
src/: effect.rs  lib.rs  prelude.rs  segment.rs  utils.rs
src/effects/: chase.rs  color.rs  complex.rs  dynamic.rs  fire.rs  mod.rs  rainbow.rs  scanner.rs  twinkle.rs
